# cio

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  openapi-printy.json  random_file  rfds.1s.sh  rust-toolchain  rust-toolchain.toml  rustfmt.toml  test
airtable/: Cargo.toml
airtable/src/: error.rs  inner.rs  lib.rs  tscim.rs
airtable/src/scim/: error.rs  group.rs  mod.rs  user.rs
airtable/tests/: live-tests.rs
barcodey/: Cargo.toml
barcodey/src/: main.rs
cfcert/: Cargo.toml  Dockerfile
cfcert/src/: main.rs
checkr/: Cargo.toml
checkr/src/: lib.rs
cio/: Cargo.toml  Dockerfile  openapi-cio.json
cio-api-types/: Cargo.toml
cio-api-types/src/: lib.rs  swag_inventory.rs
cio/migrations/2020-09-06-203717_labels/: down.sql  up.sql
cio/migrations/2020-09-06-213759_buildings/: down.sql  up.sql
cio/migrations/2020-09-06-220727_users/: up.sql
cio/migrations/2020-09-06-222135_links/: down.sql  up.sql
cio/migrations/2020-09-06-223136_conference_rooms/: down.sql  up.sql
cio/migrations/2020-09-06-230523_groups/: down.sql  up.sql
cio/migrations/2020-09-06-232243_applicants/: down.sql  up.sql
cio/migrations/2020-09-07-001207_rfds/: down.sql  up.sql
cio/migrations/2020-09-07-004737_mailing_list_subscribers/: down.sql  up.sql
cio/migrations/2020-09-07-045111_auth_logins/: down.sql  up.sql
cio/migrations/2020-09-07-173551_repos/: down.sql  up.sql
cio/migrations/2020-09-10-201146_auth_user_logins/: down.sql  up.sql
cio/migrations/2020-09-30-200841_journal_club_meetings/: down.sql  up.sql
cio/migrations/2020-09-30-220139_journal_club_papers/: down.sql  up.sql
cio/migrations/2020-11-20-215828_certificates/: down.sql  up.sql
cio/migrations/2021-01-02-200240_page_views/: down.sql  up.sql
cio/migrations/2021-01-19-193431_inbound_shipments/: down.sql  up.sql
cio/migrations/2021-01-19-234256_recorded_meetings/: down.sql  up.sql
cio/migrations/2021-02-08-232431_applicant_interviews/: down.sql  up.sql
cio/migrations/2021-03-30-200357_applicant_reviewers/: down.sql  up.sql
cio/migrations/2021-03-31-171828_software_vendors/: down.sql  up.sql
cio/migrations/2021-05-07-011909_outbound_shipments/: down.sql  up.sql
cio/migrations/2021-05-07-181515_swag_inventory_items/: down.sql  up.sql
cio/migrations/2021-05-08-215430_barcode_scans/: down.sql  up.sql
cio/migrations/2021-05-20-201621_swag_items/: down.sql  up.sql
cio/migrations/2021-05-24-192636_rack_line_subscribers/: down.sql  up.sql
cio/migrations/2021-06-03-002810_credit_card_transactions/: down.sql  up.sql
cio/migrations/2021-06-04-013242_accounts_payable/: down.sql  up.sql
cio/migrations/2021-06-05-032532_expensed_items/: down.sql  up.sql
cio/migrations/2021-06-08-181256_api_tokens/: down.sql  up.sql
cio/migrations/2021-06-10-195729_package_pickups/: down.sql  up.sql
cio/migrations/2021-06-18-173032_companys/: down.sql  up.sql
cio/migrations/2021-06-28-201655_asset_items/: down.sql  up.sql
cio/migrations/2021-07-08-221358_bookings/: down.sql  up.sql
cio/migrations/2021-07-28-200335_applicant_reviews/: down.sql  up.sql
cio/migrations/2021-09-09-192142_functions/: down.sql  up.sql
cio/migrations/2021-10-01-231257_rfd_sections/: up.sql
cio/migrations/2021-10-01-233648_rfd_sections/: down.sql  up.sql
cio/migrations/2022-02-18-203601_create_indexes/: down.sql  up.sql
cio/migrations/2022-03-15-000734_fix_zoom/: up.sql
cio/migrations/2022-03-31-221059_relationships/: up.sql
cio/migrations/2022-03-31-223216_relationships2/: up.sql
cio/migrations/2022-06-02-180848_rack_line_zoho_tracking/: down.sql  up.sql
cio/migrations/2022-06-28-123316_create_resources/: down.sql  up.sql
cio/migrations/2022-07-07-135513_add_disallow_github_flag/: down.sql  up.sql
cio/migrations/2022-07-15-120313_add_upload_tokens/: up.sql  (+1 more)
cio/src/: airtable.rs  analytics.rs  api_tokens.rs  app_config.rs  applicant_reviews.rs  applicant_status.rs  applicant_uploads.rs  applicants.rs  application_form.rs  asset_inventory.rs  auth0.rs  auth_logins.rs  certs.rs  cloud_dns.rs  cloudflare.rs  code_that_should_be_generated.rs  colors.rs  companies.rs  configs.rs  core.rs  customers.rs  db.rs  db_setup_macro.rs  dns_providers.rs  dns_proxy.rs  enclose.rs  event_types.rs  features.rs  finance.rs  functions.rs  github_commits.rs  github_prs.rs  gsuite.rs  health.rs  huddles.rs  influx.rs  interviews.rs  journal_clubs.rs  lib.rs  mailchimp.rs  (+27 more)
cio/tests/: airtable_equiv.rs  airtable_user.rs  cloudflare_client.rs  google_auth.rs  google_drive_materials.rs  mailerlite.rs  rfd_index.rs  zoho_lead.rs
diesel-sentry/: Cargo.toml
diesel-sentry/src/: lib.rs
docusign/: Cargo.toml
docusign/src/: lib.rs
drive/: Cargo.toml
drive/src/: lib.rs
dropshot-auth/: Cargo.toml
dropshot-auth/src/: bearer.rs  http.rs  lib.rs  query.rs  sig.rs
dropshot-verify-request/: Cargo.toml
dropshot-verify-request/src/: bearer.rs  http.rs  lib.rs  query.rs  sig.rs
giphy/: Cargo.toml
giphy/src/: lib.rs
google-geocode/: Cargo.toml
google-geocode/src/: lib.rs
gsuite/: Cargo.toml  README.md
gsuite/src/: lib.rs
gusto/: Cargo.toml
gusto/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
mailchimp/: Cargo.toml
mailchimp-minimal-api/: Cargo.toml  README.md
mailchimp-minimal-api/src/: lib.rs  types.rs
mailchimp-minimal-api/tests/: list_subscribers.rs
mailchimp/src/: lib.rs
mailerlite/: Cargo.toml
mailerlite/src/: additional_serde.rs  endpoints.rs  lib.rs  types.rs
mailerlite/tests/: segments.rs
okta/: Cargo.toml
okta/src/: lib.rs
printy/: Cargo.toml  openapi-printy.json
printy/src/: bearer.rs  main.rs
quickbooks/: Cargo.toml
quickbooks/src/: lib.rs
ramp-minimal-api/: Cargo.toml
ramp-minimal-api/src/: lib.rs
revai/: Cargo.toml
revai/src/: lib.rs
sendgrid/: Cargo.toml
sendgrid/src/: lib.rs
sheets/: Cargo.toml
sheets/src/: lib.rs
shippo/: Cargo.toml
shippo/src/: lib.rs
shippo/tests/: data.rs  http_test.rs
slack/: Cargo.toml
slack/src/: lib.rs
tailscale/: Cargo.toml
tailscale/src/: lib.rs
tailscale/tests/: http_test.rs
(+208 files in other folders)
