[workspace]
members = [
	"airtable",
	"barcodey",
	"checkr",
	"cfcert",
	"cio",
	"cio-api-types",
	"diesel-sentry",
	"docusign",
	"dropshot-verify-request",
	"google-geocode",
	"macros",
	"mailchimp-minimal-api",
	"mailerlite",
	"partial-struct",
	"printy",
	"quickbooks",
	"shippo",
	"slack",
	"tailscale",
	"webhooky",
	"zoho-client",
]

[profile.release]
debug = true