[workspace]
members = [
	"airtable",
	"barcodey",
	"checkr",
	"cfcert",
	"cio",
	"cio-api-types",
	"diesel-sentry",
	"docusign",
	"dropshot-verify-request",
	"google-geocode",
	"macros",
	"mailchimp-minimal-api",
	"mailerlite",
	"partial-struct",
	"parse-rfd",
	"printy",
	"quickbooks",
	"ramp-minimal-api",
	"shippo",
	"slack",
	"tailscale",
	"webhooky",
	"zoho-client",
]

[profile.release]
debug = true