[package]
name = "airtable-api"
description = "An API client for Airtable"
version = "0.1.36"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/airtable-api"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
reqwest-tracing = { workspace = true }
schemars = { workspace = true, features = ["chrono", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
