[package]
name = "airtable-api"
description = "An API client for Airtable"
version = "0.2.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/airtable-api"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2.2"
reqwest-tracing = { version = "0.4", features = ["opentelemetry_0_17"] }
schemars = { version = "0.8", features = ["chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
