[package]
name = "barcodey"
description = "A simple daemon to listen for barcode scans over HID/USB."
version = "0.1.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cio-api  = { workspace = true }
hidapi = "^1.3.4"
keycode = "^0.3.0"
log = { workspace = true, features = ["serde"] }
pretty_env_logger = { workspace = true }
sentry = { workspace = true, features = ["anyhow", "log", "backtrace", "default", "panic", "contexts", "debug-images", "tracing"] }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
