[package]
name = "barcodey"
description = "A simple daemon to listen for barcode scans over HID/USB."
version = "0.1.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cio-api = { path = "../cio" }
hidapi = "^2.1.0"
keycode = "^0.3.0"
log = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.4"
sentry = { version = "^0.27.0", features = ["anyhow", "log", "backtrace", "default", "panic", "contexts", "debug-images", "tracing"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "^1.0", features = ["serde", "v4"] }
