[package]
name = "barcodey"
description = "A simple daemon to listen for barcode scans over HID/USB."
version = "0.1.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cio-api = { path = "../cio" }
hidapi = "^1.3.4"
keycode = "^0.3.0"
log = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.4"
sentry = { version = "^0.27.0", default-features = false, features = ["anyhow", "log", "backtrace", "panic", "contexts", "debug-images", "tracing", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "^1.0", features = ["serde", "v4"] }
