[package]
name = "cfcert"
version = "0.1.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"

[[bin]]
name = "cfcert"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cloudflare = "^0.9.0"
tokio = { version = "=1", features = ["full"] }
