[package]
name = "cfcert"
version = "0.1.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2021"

[[bin]]
name = "cfcert"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Swap to branch due to breaking change in CloudFlare API
# cloudflare = "^0.9.1"
cloudflare = { git = "https://github.com/augustuswm/cloudflare-rs" }
tokio = { version = "=1", features = ["full"] }
