[package]
name = "checkr"
description = "An API client for Checkr"
version = "0.0.10"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/checkr"

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
schemars = { workspace = true, features = ["chrono", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
