[package]
name = "cio-api-types"
description = "Types for cio API"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/cio-api"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
schemars = { version = "0.8" }
