[package]
name = "cio-api"
description = "Helper functions and types for doing the activities of a CIO"
version = "0.2.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/cio-api"

[[bin]]
name = "cio-api"
path = "src/main.rs"

[dependencies]
acme-lib = "^0.8.0"
airtable-api = "^0.1.36"
#airtable-api = { path = "../airtable" }
anyhow = { workspace = true }
async-bb8-diesel = { workspace = true }
async-trait= { workspace = true }
barcoders = { version = "1.0.2", features = ["image", "ascii", "svg", "json"]}
base64 = { workspace = true }
bb8 = "^0.7.1"
byte-unit = "4"
checkr = { workspace = true }
#checkr = { path = "../checkr" }
chrono = { workspace = true }
chrono-humanize = { workspace = true }
chrono-tz = { workspace = true }
cio-api-types = { workspace = true }
cloudflare = { workspace = true }
csv = "1.1"
comrak = "0.12"
# Tracking pending 2.0 version.
diesel = { workspace = true, features = ["serde_json", "postgres", "chrono", "128-column-tables", "r2d2", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"]  }
diesel-sentry = { path = "../diesel-sentry" }
diffy = "^0.2.0"
docusign = { workspace = true }
#docusign = { path = "../docusign" }
dropshot = { workspace = true }
flate2 = "1"
#dropshot = { git = "https://github.com/jessfraz/dropshot", branch = "rebased-working-args" }
futures-util = "0.3"
google-calendar = "^0.3.0"
#google-calendar = { path = "../../third-party-api-clients/google/calendar" }
google-drive = { workspace = true }
# google-drive = { path = "../../third-party-api-clients/google/drive" }
google-geocode = "^0.1.2"
#google-geocode = {path = "../google-geocode" }
google-groups-settings = "^0.3.0"
#google-groups-settings = { path = "../../third-party-api-clients/google/groups-settings" }
gsuite-api = "^0.4.0"
#gsuite-api = { path = "../../third-party-api-clients/google/admin" }
gusto-api = { workspace = true }
#gusto-api = { path = "../../third-party-api-clients/gusto" }
handlebars = "4.2.2"
hex = { workspace = true }
http = { workspace = true }
image = "^0.23.14"
Inflector = { workspace = true }
lopdf = { git = "https://github.com/J-F-Liu/lopdf", branch = "master" }
log = { workspace = true, features = ["serde"] }
macros = { path = "../macros" }
# mailchimp-api = "^0.1.15"
#mailchimp-api = { path = "../mailchimp" }
mailchimp-minimal-api = { workspace = true }
names = "^0.14.0"
nom_pem = "4"
octorust = { workspace = true }
#octorust = { path = "../../third-party-api-clients/github/", features = ["httpcache"] }
okta = "^0.2.2"
#okta = { path = "../../third-party-api-clients/okta/" }
openssl = "0.10"
partial-struct = { path = "../partial-struct" }
phonenumber = "0.3"
pretty_env_logger = { workspace = true }
printpdf = { version = "^0.5.2", features = ["embedded_images"] }
quickbooks = { workspace = true }
#quickbooks = { path = "../quickbooks" }
ramp-api = { workspace = true }
#ramp-api = { path = "../../third-party-api-clients/ramp" }
rand = { workspace = true, features = ["alloc"] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
reqwest-tracing = { workspace = true }
revai = { version = "^0.3.0" }
#revai = { path = "../../third-party-api-clients/rev.ai" }
ring = "0.16.20"
schemars = { workspace = true, features = ["chrono", "uuid"] }
sendgrid-api = "^0.2.0"
#sendgrid-api = { path = "../../third-party-api-clients/sendgrid" }
sentry = { workspace = true, features = ["anyhow", "log", "backtrace", "default", "panic", "contexts", "tracing"] }
serde = { workspace = true }
serde_json = { workspace = true }
sheets = { workspace = true }
#sheets = { path = "../../third-party-api-clients/google/sheets" }
shippo = { workspace = true }
#shippo = { path = "../shippo" }
shipbob = { workspace = true }
slack-chat-api = { workspace = true }
#slack-chat-api = { path = "../slack" }
sodiumoxide = "^0.2.7"
steno = { workspace = true }
tailscale-api = "^0.1.2"
tracing = { workspace = true }
#tailscale-api = { path = "../tailscale" }
tripactions = "0.2.3"
#tripactions = { path = "../../third-party-api-clients/tripactions" }
titlecase = "1.0"
tokio = { workspace = true, features = ["full"] }
toml = "0.5"
url = { workspace = true }
uuid = { workspace = true }
walkdir = "^2.3.2"
yup-oauth2 = "^7"
zip = "0.6.2"
zoho-api = { path = "../zoho-client" }
zoom-api = { workspace = true }
stacker = { workspace = true }
#zoom-api = { path = "../../third-party-api-clients/zoom" }

[dev-dependencies]
tracing-subscriber = { workspace = true }
