[package]
name = "cio-api"
description = "Helper functions and types for doing the activities of a CIO"
version = "0.2.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/cio-api"

[[bin]]
name = "cio-api"
path = "src/main.rs"

[dependencies]
airtable-api = { path = "../airtable" }
anyhow = "1"
async-bb8-diesel = { git = "https://github.com/oxidecomputer/async-bb8-diesel", rev = "be3d9bc" }
async-trait = "^0.1.53"
barcoders = { version = "1.0.2", features = ["image", "ascii", "svg", "json"]}
base64 = "^0.13"
bb8 = "^0.8.0"
byte-unit = "4"
checkr = { path = "../checkr" }
chrono = { version = "0.4.22", features = ["serde"] }
chrono-humanize = "0.2.2"
chrono-tz = { version = "0.7", features = ["serde"] }
cio-api-types = { path = "../cio-api-types" }
# Swap to branch due to breaking change in CloudFlare API
# cloudflare = "^0.9.1"
cloudflare = { git = "https://github.com/augustuswm/cloudflare-rs", default-features = false, features = ["rustls-tls"] }
csv = "1.1"
comrak = "0.17"
diesel = { version = "=2.0.4", features = ["serde_json", "postgres", "chrono", "128-column-tables", "r2d2"]  }
diffy = "^0.3.0"
docusign = { path = "../docusign" }
dropshot = { git = "https://github.com/oxidecomputer/dropshot" }
flate2 = "1"
fs_extra = "1.2.0"
futures = "0.3.28"
google-calendar = "0.7.0-rc.1"
google-dns1 = "5.0.2"
google-drive = "0.7.0-rc.1"
google-geocode = {path = "../google-geocode" }
google-groups-settings = "0.7.0-rc.1"
google-storage1 = "5.0.2"
gsuite-api = "0.7.0-rc.1"
gusto-api = "0.7.0-rc.1"
handlebars = "4.3.6"
hex = "0.4.3"
hmac = "0.12.1"
http = "0.2.6"
image = "=0.23.14"
Inflector = "^0.11.4"
instant-acme = "0.3.2"
lopdf = { git = "https://github.com/J-F-Liu/lopdf", branch = "master" }
log = { version = "0.4", features = ["serde"] }
macros = { path = "../macros" }
mailerlite = { path = "../mailerlite" }
mailchimp-minimal-api = { path = "../mailchimp-minimal-api" }
meilisearch-minimal-api = { path = "../meilisearch-minimal-api" }
md-5 = "0.10.5"
mime = "0.3.0"
names = "^0.14.0"
# octorust = { version = "0.7.0-rc.1", features = ["httpcache"] }
octorust = { git = "https://github.com/oxidecomputer/third-party-api-clients", branch = "cache-testing", features = ["httpcache"] }
okta = "0.7.0-rc.1"
openssl = "0.10"
parse-rfd = { path = "../parse-rfd" }
partial-struct = { path = "../partial-struct" }
phonenumber = "0.3"
pretty_env_logger = "0.4"
printpdf = { version = "=0.5.2", features = ["embedded_images"] }
procfs = "0.14.2"
quickbooks = { path = "../quickbooks" }
ramp-minimal-api = { path = "../ramp-minimal-api" }
rand = { version = "^0.8.5", features = ["alloc"] }
rcgen = "0.11.1"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2.2"
reqwest-tracing = { version = "0.4", features = ["opentelemetry_0_17"] }
revai = "0.7.0-rc.1"
ring = "0.16.20"
rsa = "0.9.2"
schemars = { version = "0.8", features = ["chrono", "uuid"] }
sendgrid-api = "0.7.0-rc.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sf-client = { git = "https://github.com/oxidecomputer/sf-client", branch = "main" }
sheets = "0.7.0-rc.1"
shippo = { path = "../shippo" }
shipbob = "0.7.0-rc.1"
slack-chat-api = { path = "../slack" }
sodiumoxide = "^0.2.7"
stacker = "0.1.14"
steno = { git = "https://github.com/oxidecomputer/steno", branch = "main" }
tracing = "^0.1"
tailscale-api = { path = "../tailscale" }
tripactions = "0.7.0-rc.1"
titlecase = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
url = "2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
walkdir = "^2.3.2"
yup-oauth2 = "8.1.0"
zip = "0.6.2"
zoho-api = { path = "../zoho-client" }
zoom-api = "0.7.0-rc.1"

[dev-dependencies]
tracing-subscriber = "0.3.15"
env_logger = "0.10.0"
