[package]
name = "diesel-sentry"
version = "0.1.0"
edition = "2021"
authors = ["Jess Frazelle <jess@oxide.computer>"]
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio.git"

[dependencies]
diesel = { git = "https://github.com/diesel-rs/diesel", rev = "6d681420", features = [ "r2d2", "postgres"] }
serde = "1"
# This HAS to match that in webhooky or else it won't work
sentry = {  features = ["anyhow", "backtrace", "default", "panic", "contexts", "debug-images", "tracing", "log"], git = "https://github.com/jessfraz/sentry-rust", rev = "ddcbd07f75c6973ee7096e490a54745db73817b7"  }
tracing = "^0.1"
uuid = { version = "^0.8", features = [ "v4", "serde" ] }
