[package]
name = "diesel-sentry"
version = "0.1.0"
edition = "2021"
authors = ["Jess Frazelle <jess@oxide.computer>"]
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio.git"

[dependencies]
diesel = { workspace = true, features = [ "r2d2", "postgres", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
serde = { workspace = true }
# This HAS to match that in webhooky or else it won't work
sentry = { workspace = true, features = ["anyhow", "backtrace", "default", "panic", "contexts", "debug-images", "tracing", "log", "slog"] }
# sentry = {  features = ["anyhow", "backtrace", "default", "panic", "contexts", "debug-images", "tracing", "log"], git = "https://github.com/jessfraz/sentry-rust", rev = "ddcbd07f75c6973ee7096e490a54745db73817b7"  }
tracing = { workspace = true }
uuid = { workspace = true }
