[package]
name = "docusign"
description = "An API client for the DocuSign API"
version = "0.1.3"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/docusign"

[dependencies]
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
jwt = { version = "0.13", features = ["openssl"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
