[package]
name = "google-drive"
description = "An API client for Google Drive"
version = "0.1.17"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/google-drive"

[dependencies]
bytes = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
yup-oauth2 = "^5"
