[package]
name = "dropshot-auth"
description = "Extractor types for performing authentication on dropshot endpoints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
sha2 = "0.10.0"
hmac = "0.12.0"
digest = "0.10.0"
async-trait = "0.1.56"
base64 = "0.13.0"
ecdsa = { version = "0.13.3", features = ["verify", "der"] }
k256 = "0.10.4"
http = "0.2.5"
log = "0.4"
schemars = "0.8"
dropshot = { git = "https://github.com/oxidecomputer/dropshot" }
serde_json = "1.0"
serde = "1.0"
serde_urlencoded = "0.7.0"
