[package]
name = "dropshot-verify-request"
description = "Extractor types for performing verification on dropshot endpoints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
digest = "0.10.0"
async-trait= { workspace = true }
base64 = { workspace = true }
ecdsa = { version = "0.13.3", features = ["verify", "der"] }
k256 = "0.10.4"
http = { workspace = true }
log = { workspace = true }
schemars = { workspace = true }
dropshot = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_urlencoded = { workspace = true }
