[package]
name = "dropshot-verify-request"
description = "Extractor types for performing verification on dropshot endpoints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.56"
base64 = "0.13.0"
digest = "0.10.0"
dropshot = { git = "https://github.com/oxidecomputer/dropshot" }
ecdsa = { version = "0.13.3", features = ["verify", "der"] }
hmac = "0.12.0"
http = "0.2.5"
hyper = "0.14.25"
k256 = "0.10.4"
log = "0.4"
schemars = "0.8"
serde_json = "1.0"
serde = "1.0"
serde_urlencoded = "0.7.0"
sha2 = "0.10.0"
