[package]
name = "gsuite-api"
description = "An API client for GSuite APIs: directory, resources, groups"
version = "0.1.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"

[dependencies]
cio-api = "^0.1.0"
rand = "0.7"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
yup-oauth2 = "^4.1.2"
