[package]
name = "gsuite-api"
description = "An API client for GSuite APIs: directory, resources, groups"
version = "0.1.27"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/gsuite-api"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yup-oauth2 = "^5"
