[package]
name = "gusto-api"
description = "An API client for Gusto"
version = "0.1.6"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/gusto"

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
schemars = { version = "0.8", features = ["chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
