[package]
name = "macros"
description = "Macros for our CIO functions"
version = "0.1.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
Inflector = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_tokenstream = "0.1.0"
syn = { workspace = true, features = [ "derive", "parsing", "printing" ] }
