[package]
name = "macros"
description = "Macros for our CIO functions"
version = "0.1.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
Inflector = "^0.11.4"
proc-macro2 = "1"
quote = "1"
serde = { version = "1.0", features = ["derive"] }
serde_tokenstream = "0.1.0"
syn = { version = "1.0", features = [ "derive", "parsing", "printing" ] }
