[package]
name = "mailchimp-minimal-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.7", features = ["json"]}
schemars = {version = "0.8.8", features = ["chrono", "uuid"]}
serde = {version = "1.0.131", features = ["derive"]}
chrono = {version = "0.4.19", features = ["serde"]}
base64 = "0.13.0"
http = "0.2.5"
urlencoding = "2.1.0"
url = "2.2.2"
serde_json = "1.0.73"
