[package]
name = "mailchimp-minimal-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["json"] }
schemars = { workspace = true, features = ["chrono", "uuid"]}
serde = { workspace = true, features = ["derive"]}
chrono = { workspace = true }
base64 = { workspace = true }
http = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
