[package]
name = "mailchimp-api"
description = "An API client for MailChimp"
version = "0.1.15"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/mailchimp-api"

[dependencies]
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
schemars = { version = "0.8", features = ["chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "^2.1.0"

[dev-dependencies]
serde_qs = "0.8"
