[package]
name = "mailchimp-api"
description = "An API client for MailChimp"
version = "0.1.15"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/mailchimp-api"

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
schemars = { workspace = true, features = ["chrono", "uuid"] }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
serde_qs = { workspace = true }
