[package]
name = "okta"
description = "An API client for Okta"
version = "0.0.5"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/cio"
documentation = "https://docs.rs/okta"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
