[package]
name = "printy"
description = "A simple server for listening on requests to print."
version = "0.1.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait= { workspace = true }
cio-api-types = { workspace = true }
dropshot = { workspace = true }
dropshot-verify-request = { workspace = true }
http = { workspace = true }
log = { workspace = true, features = ["serde"] }
reqwest = { workspace = true }
pretty_env_logger = { workspace = true }
sentry = { workspace = true, features = ["anyhow", "log", "backtrace", "default", "panic", "contexts", "debug-images", "tracing"] }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
