[package]
name = "printy"
description = "A simple server for listening on requests to print."
version = "0.1.0"
authors = ["Jess Frazelle <jess@oxide.computer>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.56"
cio-api-types = { path = "../cio-api-types" }
dropshot = { git = "https://github.com/oxidecomputer/dropshot" }
dropshot-verify-request = { path = "../dropshot-verify-request" }
http = "0.2.6"
log = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
pretty_env_logger = "0.4"
sentry = { version = "^0.27.0", default-features = false, features = ["anyhow", "log", "backtrace", "panic", "contexts", "debug-images", "tracing", "rustls"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "^1.0", features = ["serde", "v4"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
